# cmodel

./: LICENSE  README.md  setup.cfg
cmodel/: __init__.py  base.py
tests/: test_base.py
