[metadata]
name = cmodel
version = attr: cmodel.__version__
description = Python library for C(onfig)Model constructor
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bonlime/cmodel
author = Emil Zakirov
author_email = bonlimezak@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7